# geocore

./: .gitattributes  .gitignore  Cargo.toml  ORCHESTRATION.md  README.md  clippy.toml
benches/: .gitignore  Cargo.toml  README.md  cases.json
benches/baselines/: example.synthetic.v1.json  schema.json
benches/benches/: benchmark_contract.rs  body_tessellation.rs  curve_pair_isolation.rs  curve_pair_solve.rs  face_tessellation.rs  graph_build.rs  graph_traversal.rs  nurbs_isolation.rs  topology_commit.rs  xt_io.rs
benches/src/: body_tessellation.rs  curve_pair_isolation.rs  curve_pair_solve.rs  face_tessellation.rs  graph_build.rs  graph_traversal.rs  lib.rs  nurbs_isolation.rs  topology.rs  xt_io.rs
benches/testdata/: cargo-criterion.synthetic.ndjson  sheet_cylinder_seam.certified.x_t  sheet_plane_polygon.certified.x_t  solid_block_curved_nurbs_face.local.x_t  solid_block_nurbs_face.certified.x_t  solid_block_tolerant_edge.certified.x_t  solid_cylinder.certified.x_t
crates/kcore/: Cargo.toml
crates/kcore/src/: arena.rs  error.rs  expansion.rs  identifier.rs  interval.rs  lib.rs  math.rs  parallel.rs  plane_triple.rs  predicates.rs  proof.rs  tolerance.rs
crates/kcore/tests/: determinism.rs  operation_context.rs  roadmap_ledger.rs
crates/kernel/: Cargo.toml  README.md
crates/kernel/examples/: boolean_xt_oracle.rs
crates/kernel/src/: classify.rs  distance.rs  edit.rs  error.rs  id.rs  interchange.rs  intersection.rs  iter.rs  lib.rs  operation.rs  primitive.rs  properties.rs  session.rs  tessellation.rs
crates/kernel/tests/: lifecycle.rs
crates/kgeom/: Cargo.toml
crates/kgeom/src/: aabb.rs  bvh.rs  conformance.rs  curve.rs  curve2d.rs  frame.rs  implicit.rs  lib.rs  param.rs  project.rs  surface.rs  surface_point.rs  tess.rs  vec.rs
crates/kgeom/tests/: curve_pair_subdivision_roundoff.rs  determinism.rs  inverse_refinement.rs  spatial_algebraic_correspondence.rs  spatial_algebraic_linear_form.rs  spatial_algebraic_primitive_integer.rs  spatial_algebraic_primitive_integer_magnitude_eight.rs  spatial_algebraic_primitive_integer_magnitude_eleven.rs  spatial_algebraic_primitive_integer_magnitude_five.rs  spatial_algebraic_primitive_integer_magnitude_four.rs  spatial_algebraic_primitive_integer_magnitude_fourteen.rs  spatial_algebraic_primitive_integer_magnitude_nine.rs  spatial_algebraic_primitive_integer_magnitude_seven.rs  spatial_algebraic_primitive_integer_magnitude_six.rs  spatial_algebraic_primitive_integer_magnitude_ten.rs  spatial_algebraic_primitive_integer_magnitude_thirteen.rs  spatial_algebraic_primitive_integer_magnitude_three.rs  spatial_algebraic_primitive_integer_magnitude_twelve.rs  spatial_algebraic_primitive_integer_magnitudes.rs  spatial_curve_pair_certificate.rs  spatial_exact_sample_witness.rs  spatial_interior_root_certificate.rs  surface_patch_subdivision_roundoff.rs  surface_point.rs  trim_orientation.rs
crates/kgraph/: Cargo.toml
crates/kgraph/src/: class.rs  descriptor.rs  error.rs  eval.rs  exact.rs  graph.rs  intersection.rs  lib.rs
crates/kgraph/tests/: graph_contract.rs  intersection_curve_certificate.rs  leaf_parity.rs  offset_surface.rs  skew_cylinder_branch.rs  transmitted_plane_offset_nurbs.rs
crates/kops/: Cargo.toml
crates/kops/src/: lib.rs
crates/kops/tests/: circle_circle.rs  circle_ellipse.rs  circle_nurbs.rs  completion.rs  cone_cone_regions.rs  conic_cone_consolidation.rs  conic_conic_consolidation.rs  conic_cylinder_consolidation.rs  conic_nurbs_consolidation.rs  conic_sphere_consolidation.rs  conic_torus_consolidation.rs  curve_curve.rs  curve_surface.rs  cylinder_cylinder_regions.rs  ellipse_ellipse.rs  ellipse_nurbs.rs  graph_cylinder_cylinder_rulings.rs  graph_cylinder_cylinder_skew_occupancy.rs  graph_plane_cylinder_rulings.rs  graph_surface.rs  graph_surface_nurbs_nurbs.rs  graph_surface_offset_nurbs.rs  graph_surface_plane_nurbs.rs  graph_surface_sphere_nurbs.rs  graph_surface_varying_offset_nurbs.rs  graph_surface_varying_offset_offset_plane.rs  graph_surface_varying_offset_plane.rs  intersection_consolidation.rs  line_circle.rs  line_ellipse.rs  line_line.rs  line_nurbs.rs  nurbs_nurbs.rs  operation_intersection.rs  parallel_cylinder_radial_relation.rs  plane_plane_regions.rs  sphere_sphere_regions.rs  surface_surface.rs  torus_torus_regions.rs
crates/ktopo/: Cargo.toml
crates/ktopo/src/: analytic_shell.rs  analytic_tangency.rs  benchmark.rs  body_copy.rs  body_distance.rs  body_properties.rs  bounded_skew_lobe_shell_proof.rs  btess.rs  cap_reaching_cylinder_shell_proof.rs  check.rs  check_region_tests.rs  chord_portal_shell_proof.rs  convex_containment.rs  convex_cylindrical_shell_proof.rs  convex_multishell.rs  cylindrical_band.rs  cylindrical_boss.rs  cylindrical_host.rs  cylindrical_host_proof.rs  cylindrical_multishell.rs  cylindrical_ports.rs  cylindrical_region_proof.rs  domain.rs  entity.rs  euler.rs  geom.rs  graph_work.rs  incidence.rs  incidence_authority.rs  index.rs  lib.rs  loop_proof.rs  make.rs  mixed_profile_prism_proof.rs  mixed_region_proof.rs  parallel_cylinder_contact_shell_proof.rs  planar.rs  planar_multishell.rs  planar_shell_proof.rs  portal_cylinder_shell_proof.rs  (+11 more)
crates/ktopo/tests/: assembly_boundary.rs  benchmark_observation.rs  body_copy.rs  body_copy_persistent_skew.rs  builders.rs  determinism.rs  euler_transactions.rs  pcurves.rs  primitives.rs  tolerance_budgets.rs  transactions.rs
crates/kxt/: Cargo.toml
crates/kxt/src/: cursor.rs  error.rs  lib.rs  parse.rs  recon.rs  schema.rs  write.rs
crates/kxt/tests/: corpus_manifest.rs  equal_limit_intersection.rs  finite_open_cubic_dual_offset.rs  finite_open_five_sample_dual_offset.rs  finite_open_nurbs_endpoint_roundoff.rs  finite_open_plane_nurbs_data.rs  read.rs  (+15 more)
examples/kernel-lifecycle/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  README.md  contract.json  rust-toolchain.toml
fuzz/fixtures/: minimal_valid.x_t
fuzz/fuzz_targets/: nurbs_constructors.rs  xt_read.rs
fuzz/scripts/: generate_nurbs_constructors_corpus.py  generate_xt_read_corpus.py
fuzz/src/: lib.rs  nurbs_constructors.rs  xt_read.rs
(+355 files in other folders)
