[workspace]
resolver = "2"
exclude = ["benches"]
members = [
    "crates/kcore",
    "crates/kgeom",
    "crates/kgraph",
    "crates/ktopo",
    "crates/kops",
    "crates/kxt",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
license = "Apache-2.0"
repository = "https://github.com/josephbajor/cad_prototype"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
# Determinism policy: never enable fast-math-style options; codegen must keep
# strict IEEE 754 semantics on every platform.
debug = true
