[package]
name = "kernel-benchmarks"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
publish = false

[dependencies]
kcore = { path = "../crates/kcore" }
kgeom = { path = "../crates/kgeom" }
kgraph = { path = "../crates/kgraph", features = ["benchmark-internals"] }
ktopo = { path = "../crates/ktopo", features = ["benchmark-internals"] }
kxt = { path = "../crates/kxt" }

[dev-dependencies]
criterion = { version = "=0.8.2", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1.0"

[[bench]]
name = "benchmark_contract"
harness = false

[[bench]]
name = "topology_commit"
harness = false

[[bench]]
name = "graph_build"
harness = false

[[bench]]
name = "graph_traversal"
harness = false

[[bench]]
name = "body_tessellation"
harness = false

[[bench]]
name = "face_tessellation"
harness = false

[[bench]]
name = "nurbs_isolation"
harness = false

[[bench]]
name = "xt_io"
harness = false

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
