[package]
name = "kernel-fuzz-contracts"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
publish = false
license = "Apache-2.0"

[package.metadata]
cargo-fuzz = true

[workspace]
members = ["."]
resolver = "2"

[features]
default = []
fuzzing = ["dep:libfuzzer-sys"]

[dependencies]
kcore = { path = "../crates/kcore" }
kgeom = { path = "../crates/kgeom" }
kgraph = { path = "../crates/kgraph" }
ktopo = { path = "../crates/ktopo" }
kxt = { path = "../crates/kxt" }
libfuzzer-sys = { version = "=0.4.13", optional = true }

[[bin]]
name = "xt_read"
path = "fuzz_targets/xt_read.rs"
test = false
doc = false
bench = false
required-features = ["fuzzing"]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
