[package]
name = "kcore"
description = "Kernel layer 0: robust predicates, expansion arithmetic, intervals, tolerance policy, entity arenas"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Intentionally empty. L0 is dependency-free: determinism and auditability
# outweigh convenience at this layer.

[lints]
workspace = true
