[package]
name = "kernel"
description = "Supported native Rust facade for kernel session, topology, and geometry identity access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kcore = { path = "../kcore" }
kgeom = { path = "../kgeom" }
kgraph = { path = "../kgraph" }
ktopo = { path = "../ktopo" }

[lints]
workspace = true
