[package]
name = "kernel"
description = "Supported native Rust facade for kernel lifecycle, contextual operations, and semantic model access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kcore = { path = "../kcore" }
kgeom = { path = "../kgeom" }
kgraph = { path = "../kgraph" }
ktopo = { path = "../ktopo" }
kxt = { path = "../kxt" }

[lints]
workspace = true
