[package]
name = "kgeom"
description = "Kernel layer 1: analytic and NURBS geometry, evaluators, intersections-support math, projection, tessellation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kcore = { path = "../kcore" }

[lints]
workspace = true
