[package]
name = "kops"
description = "Kernel layer 3 intersection foundation: bounded line/line intersections"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kcore = { path = "../kcore" }
kgeom = { path = "../kgeom" }

[lints]
workspace = true
