[package]
name = "kops"
description = "Kernel layer 3 intersection foundation: bounded analytic curve intersections"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kcore = { path = "../kcore" }
kgeom = { path = "../kgeom" }

[lints]
workspace = true
