[package]
name = "kxt"
description = "Modern-schema Parasolid XT reader and deterministic text writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kcore = { path = "../kcore" }
kgeom = { path = "../kgeom" }
ktopo = { path = "../ktopo" }

[lints]
workspace = true
