[package]
name = "kxt"
description = "Modern-schema Parasolid XT reader and deterministic text writer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kcore = { path = "../kcore" }
kgeom = { path = "../kgeom" }
kgraph = { path = "../kgraph" }
ktopo = { path = "../ktopo" }

[lints]
workspace = true
