[package]
name = "kernel-lifecycle"
description = "Facade-only executable example covering a supported kernel application lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
kernel = { path = "../../crates/kernel" }

[lints]
workspace = true
